Implementing requested changes.